--- a/index.html
+++ b/index.html
@@ -74,31 +74,9 @@
                         <button type="button" class="btn btn-primary m-2"><a class="text-white text-decoration-none" href="contact.html">Contact</a></button>
                     </div>
 
-                    <div class="col-12 d-flex align-items-center justify-content-start"
-                        style="height: 50%;"> 
-                        <div class="col-6 h-100">
-                            Tech Stack
-                            <ul>
-                                <li>SQL</li>
-                                <li>Tableau</li>
-                                <li>Power BI</li>
-                                <li>Python</li>
-                                <li>Web Development</li>
-                            </ul>
-                        </div> 
-                        <div class="col-6 h-100">
-                            Key Skills
-                            <ul>
-                                <li>Client Relationships</li>
-                                <li>Communication</li>
-                                <li>Data Visualisation</li>
-                                <li>Attention to detail</li>
-                                <li>Problem-solving</li>
-                            </ul>
-                        </div>
-                        
+                    <div class="col-12 d-flex align-items-center justify-content-start">
+                        <p>Key Skills</p>
                     </div>
-
                 </div>
             </div>
 
