--- a/projects.html
+++ b/projects.html
@@ -1,40 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- meta tags -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <title>Projects</title>
+<link rel="stylesheet" href="assets/css/style.css">
+
+<title>Projects</title>
+
 </head>
 
 <body>
-    <div class="container mt-5 pt-2">
-        <h1 class="mb-4">Projects</h1>
+
+<div class="content-wrapper">
+
+    <h1>Projects</h1>
+
+    <p class="intro">
+        A selection of data and development projects focused on social impact, labour economics,
+        and human-centred analysis.
+    </p>
+
+
+    <!-- DATA PROJECTS -->
+
+    <section>
 
         <h2>Data Analysis</h2>
-        <h3>Tools</h3>
-        <div class="col-12 d-flex align-items-center justify-content-start mb-4" style="height: 20%;">
-            <button type="button" class="btn btn-primary m-2"><a class="text-white text-decoration-none" href="pregnancyloss_project.html">Tableau</a></button>
-            <button type="button" class="btn btn-primary m-2">Power BI</button>
-            <button type="button" class="btn btn-primary m-2">Python</button>
+
+        <div class="tool-row">
+            <span class="tool-chip">Tableau</span>
+            <span class="tool-chip">SQL</span>
+            <span class="tool-chip">Python</span>
+            <span class="tool-chip">Power BI</span>
         </div>
 
-        <h2>Web Development</h2>
-        <h3>Technologies</h3>
-        <div class="col-12 d-flex align-items-center justify-content-start" style="height: 20%;">
-            <button type="button" class="btn btn-primary m-2">HTML & CSS</button>
-            <button type="button" class="btn btn-primary m-2">JavaScript</button>
-            <button type="button" class="btn btn-primary m-2">Python</button>
-            <button type="button" class="btn btn-primary m-2">Full Stack - Django</button>
-            <button type="button" class="btn btn-primary m-2">Full Stack - React</button>
+
+        <!-- PROJECT CARD -->
+
+        <div class="project-card">
+
+            <div class="project-content">
+
+                <h3>The Lasting Economic Impact of Pregnancy Loss</h3>
+
+                <p>
+                    A longitudinal analysis exploring how pregnancy loss affects women’s earnings
+                    and employment trajectories using Office for National Statistics data.
+                    The project combines event-based time analysis with interactive
+                    visualisation to uncover persistent economic impacts.
+                </p>
+
+                <div class="tool-row">
+                    <span class="tool-chip">Tableau</span>
+                    <span class="tool-chip">Data Visualisation</span>
+                    <span class="tool-chip">Labour Economics</span>
+                </div>
+
+                <a href="pregnancyloss_project.html" class="btn-main">
+                    Read Project →
+                </a>
+
+            </div>
+
         </div>
-    </div>
+
+    </section>
+
+
+
+    <!-- WEB PROJECTS -->
+
+    <section>
+
+        <h2>Web Development</h2>
+
+        <div class="tool-row">
+            <span class="tool-chip">HTML & CSS</span>
+            <span class="tool-chip">JavaScript</span>
+            <span class="tool-chip">Django</span>
+            <span class="tool-chip">React</span>
+        </div>
+
+        <!-- Future cards go here -->
+
+    </section>
+
+</div>
+
 </body>
 </html>
