Add links to navbar and adjust padding on navbar

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
 
-        <a class="navbar-brand" href="#">Kate Llewellyn</a>
+        <a class="navbar-brand" href="index.html">Kate Llewellyn</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
             <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
 
         <div class="collapse navbar-collapse" id="nav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">CV</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
