Update title and hero text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h2 class="name">Kate Llewellyn</h2>
 
             <p class="title">
-                Data Analyst specialising in women’s health and social impact
+                Analyst | Women’s Health & Social Impact
             </p>
 
             <div class="social-links">
@@ -73,9 +73,9 @@
         <div class="col-lg-7">
 
             <p class="hero-text">
-                I turn complex data into clear, meaningful insight.
-                My work focuses on labour economics, gender equity, and reproductive health —
-                using analysis to support better policy, stronger workplaces, and more informed decisions.
+                I believe good data should improve real lives.
+
+                With a foundation in software and analytics, I’m now focused on using data to support better decisions in areas such as women’s health, labour economics, and social impact. I’m especially motivated by work that turns evidence into meaningful change.
             </p>
 
             <div class="button-group">
