Add about me section

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         <div class="col-lg-7">
 
             <p class="hero-text">
-                I believe good data should improve real lives.
+                I use data to support better decisions — particularly in areas that shape people’s health, security, and opportunity.
 
-                With a foundation in software and analytics, I’m now focused on using data to support better decisions in areas such as women’s health, labour economics, and social impact. I’m especially motivated by work that turns evidence into meaningful change.
+                With a background in software, client insight, and higher education, I bring a structured, human-centred approach to analysis. I am especially motivated by work that advances women’s health, reproductive rights, and social equity.
             </p>
 
             <div class="button-group">
