--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 
 <link rel="stylesheet" href="assets/css/style.css">
 
-<title>Projects</title>
+<title>KSL - Case Studies</title>
 
 </head>
 
@@ -40,7 +40,7 @@
 
 <div class="content-wrapper">
 
-    <h1>Projects</h1>
+    <h1>Case Studies & Projects</h1>
 
     <p class="intro">
         A selection of data and development projects focused on social impact, labour economics,
