--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 <link rel="stylesheet" href="assets/css/style.css">
 
-<title>Kate Llewellyn Portfolio</title>
+<title>KSL - Contact</title>
 
 </head>
 
