--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 </nav>
 
 <div class="container content-wrapper">
-    <p>My career has been shaped by a consistent thread: a desire to contribute to work that improves people’s lives in tangible ways. After studying politics with a focus on human rights, I was naturally drawn toward environments centred on public value, spending over a decade working within higher education in operational and stakeholder-facing roles.
+    <p>My career has been shaped by a consistent thread: a desire to contribute to work that improves people’s lives in tangible ways. After studying politics with a focus on human rights, I was naturally drawn toward environments centred on public value, spending over a decade working within higher education in operational and stakeholder-facing roles. <br>
 
     During this time, I developed a reputation for being dependable, methodical, and solutions-oriented — someone colleagues trusted to bring structure to complex processes and support effective decision-making.
 
