--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 
     During this time, I developed a reputation for being dependable, methodical, and solutions-oriented — someone colleagues trusted to bring structure to complex processes and support effective decision-making.
 
-    My transition into technology began with a full-stack software development diploma, where I discovered a natural affinity for technical problem-solving and analytical thinking. What started as a skills-driven move soon evolved into something more intentional: a recognition that data, when applied thoughtfully, can influence systems, shape policy, and improve outcomes at scale.
+    My transition into technology began with a full-stack software development diploma, where I discovered a natural affinity for technical problem-solving and analytical thinking. What started as a skills-driven move soon evolved into something more intentional: a recognition that data, when applied thoughtfully, can influence systems, shape policy, and improve outcomes at scale. <br>
 
     Working within a software company further strengthened this direction. After initially supporting clients in technical environments, I progressed into a Client Success Manager role where I developed analytical dashboards and used tools such as PowerBI to surface insights, improve product adoption, and guide strategic conversations.
 
