--- a/about.html
+++ b/about.html
@@ -42,19 +42,19 @@
 </nav>
 
 <div class="container content-wrapper">
-    <p>My career has been shaped by a consistent thread: a desire to contribute to work that improves people’s lives in tangible ways. After studying politics with a focus on human rights, I was naturally drawn toward environments centred on public value, spending over a decade working within higher education in operational and stakeholder-facing roles. <br>
+    <p>My career has been shaped by a consistent thread: a desire to contribute to work that improves people’s lives in tangible ways. After studying politics with a focus on human rights, I was naturally drawn toward environments centred on public value, spending over a decade working within higher education in operational and stakeholder-facing roles.</p>
 
-    During this time, I developed a reputation for being dependable, methodical, and solutions-oriented — someone colleagues trusted to bring structure to complex processes and support effective decision-making.
+    <p>During this time, I developed a reputation for being dependable, methodical, and solutions-oriented — someone colleagues trusted to bring structure to complex processes and support effective decision-making.</p>
 
-    My transition into technology began with a full-stack software development diploma, where I discovered a natural affinity for technical problem-solving and analytical thinking. What started as a skills-driven move soon evolved into something more intentional: a recognition that data, when applied thoughtfully, can influence systems, shape policy, and improve outcomes at scale. <br>
+    <p>My transition into technology began with a full-stack software development diploma, where I discovered a natural affinity for technical problem-solving and analytical thinking. What started as a skills-driven move soon evolved into something more intentional: a recognition that data, when applied thoughtfully, can influence systems, shape policy, and improve outcomes at scale.</p>
 
-    Working within a software company further strengthened this direction. After initially supporting clients in technical environments, I progressed into a Client Success Manager role where I developed analytical dashboards and used tools such as PowerBI to surface insights, improve product adoption, and guide strategic conversations.
+    <p>Working within a software company further strengthened this direction. After initially supporting clients in technical environments, I progressed into a Client Success Manager role where I developed analytical dashboards and used tools such as PowerBI to surface insights, improve product adoption, and guide strategic conversations.</p>
 
-    Alongside this professional growth, becoming a parent deepened my awareness of the structural challenges that can exist within healthcare systems and workplace policies. Reading Invisible Women by Caroline Criado Perez crystallised my thinking, reinforcing how critical good data is to ensuring that women’s experiences are properly represented and understood.
+    <p>Alongside this professional growth, becoming a parent deepened my awareness of the structural challenges that can exist within healthcare systems and workplace policies. Reading Invisible Women by Caroline Criado Perez crystallised my thinking, reinforcing how critical good data is to ensuring that women’s experiences are properly represented and understood.</p>
 
-    Today, I am focused on applying my analytical and technical skills within mission-led organisations — particularly those working across women’s health, reproductive rights, and social equity. I am especially motivated by roles where rigorous analysis can support better decisions, stronger services, and more transparent systems.
+    <p>Today, I am focused on applying my analytical and technical skills within mission-led organisations — particularly those working across women’s health, reproductive rights, and social equity. I am especially motivated by roles where rigorous analysis can support better decisions, stronger services, and more transparent systems.</p>
 
-    My earlier career continues to shape how I approach data: collaboratively, pragmatically, and always with an awareness that behind every dataset are real people and lived experiences.</p>
+    <p>My earlier career continues to shape how I approach data: collaboratively, pragmatically, and always with an awareness that behind every dataset are real people and lived experiences.</p>
 </div>
     
 </body>
