amend styles on index

--- a/about.html
+++ b/about.html
@@ -42,9 +42,9 @@
 </nav>
 
 <div class="container content-wrapper">
-    <p class="p-2">My career has been shaped by a consistent thread: a desire to contribute to work that improves people’s lives in tangible ways. After studying politics with a focus on human rights, I was naturally drawn toward environments centred on public value, spending over a decade working within higher education in operational and stakeholder-facing roles.</p>
+    <p class="p-2">My career has been shaped by a consistent thread: a desire to contribute to work that improves people’s lives in tangible ways. After studying politics, with a focus on human rights, I was naturally drawn toward environments centred on public value; spending over a decade working within higher education in operational and stakeholder-facing roles.</p>
 
-    <p class="p-2">During this time, I developed a reputation for being dependable, methodical, and solutions-oriented — someone colleagues trusted to bring structure to complex processes and support effective decision-making.</p>
+    <p class="p-2">During this time, I developed a reputation for being dependable, methodical, and solutions-oriented - someone colleagues trusted to bring structure to complex processes and support effective decision-making.</p>
 
     <p class="p-2">My transition into technology began with a full-stack software development diploma, where I discovered a natural affinity for technical problem-solving and analytical thinking. What started as a skills-driven move soon evolved into something more intentional: a recognition that data, when applied thoughtfully, can influence systems, shape policy, and improve outcomes at scale.</p>
 
