--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="nav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="projects.html">Case Studies</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">CV</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
             </ul>
@@ -81,7 +81,7 @@
             <div class="button-group">
 
                 <a href="projects.html" class="btn-main">
-                    View Projects
+                    Case Studies
                 </a>
 
                 <a href="contact.html" class="btn-secondary">
