Update to about

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 </nav>
 
 <div class="container content-wrapper">
-    <h1>About Me</h1>
+    <h1>About</h1>
 
     <p class="p-2">My career has been shaped by a consistent thread: a desire to contribute to work that improves people’s lives in tangible ways. After studying politics, with a focus on human rights, I was naturally drawn toward organisations that centred on public value; spending over a decade working within higher education in operational and stakeholder-facing roles.</p>
 
