Update hero text

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="col-lg-7">
 
             <p class="hero-text">
-                I use data to support better decisions — particularly in areas that shape people’s health, security, and opportunity.
+                I’m motivated by the opportunity to use data to support better decisions — particularly in areas that shape people’s health, security, and opportunity.
 
                 <br><br>
 
