Update social links

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             </p>
 
             <div class="social-links">
-                <a href="https://www.linkedin.com/in/katellewellyn/" target="_blank">LinkedIn</a>
-                <a href="https://github.com/katellewellyn" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/in/llewellynksj" target="_blank">LinkedIn</a>
+                <a href="https://github.com/llewellynksj" target="_blank">GitHub</a>
             </div>
 
         </div>
