Add padding to skills box

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             </div>
 
-            <div class="skills-box">
+            <div class="skills-box pt-2">
 
                 <h3>Core Skills</h3>
 
