Amend padding on hero

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 With a background in software, client insight, and higher education, I bring a structured, human-centred approach to analysis. I am especially motivated by work that advances women’s health, reproductive rights, and social equity.
             </p>
 
-            <div class="button-group">
+            <div class="button-group pt-1">
 
                 <a href="projects.html" class="btn-main">
                     Case Studies
@@ -92,7 +92,7 @@
 
             </div>
 
-            <div class="skills-box pt-2">
+            <div class="skills-box pt-1">
 
                 <h3>Core Skills</h3>
 
