--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <!-- RIGHT -->
 
-        <div class="col-lg-7">
+        <div class="col-lg-7 mt-3">
 
             <p class="hero-text">
                 I’m motivated by the opportunity to use data to support better decisions — particularly in areas that shape people’s health, security, and opportunity.
