Make button container flex

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 With a background in software, client insight, and higher education, I bring a structured, human-centred approach to analysis. I am especially motivated by work that advances women’s health, reproductive rights, and social equity.
             </p>
 
-            <div class="button-group pt-1">
+            <div class="button-group pt-1 d-flex flex-column flex-sm-row gap-2">
 
                 <a href="projects.html" class="btn-main">
                     Case Studies
