move hero wrapper to its own div

--- a/index.html
+++ b/index.html
@@ -44,73 +44,74 @@
 
 <!-- HERO -->
 
-<div class="container hero-wrapper">
+<div class="container">
+    <div class="hero-wrapper">
+        <div class="row align-items-center">
 
-    <div class="row align-items-center">
+            <!-- LEFT -->
 
-        <!-- LEFT -->
+            <div class="col-lg-5 text-center">
 
-        <div class="col-lg-5 text-center">
+                <img class="profile-img" src="assets/images/me.jpg" alt="Kate Llewellyn">
 
-            <img class="profile-img" src="assets/images/me.jpg" alt="Kate Llewellyn">
+                <h2 class="name">Kate Llewellyn</h2>
 
-            <h2 class="name">Kate Llewellyn</h2>
+                <p class="title">
+                    Analyst | Women’s Health & Social Impact
+                </p>
 
-            <p class="title">
-                Analyst | Women’s Health & Social Impact
-            </p>
-
-            <div class="social-links">
-                <a href="https://www.linkedin.com/in/llewellynksj" target="_blank">LinkedIn</a>
-                <a href="https://github.com/llewellynksj" target="_blank">GitHub</a>
-            </div>
-
-        </div>
-
-
-        <!-- RIGHT -->
-
-        <div class="col-lg-7 mt-3">
-
-            <p class="hero-text">
-                I’m motivated by the opportunity to use data to support better decisions — particularly in areas that shape people’s health, security, and opportunity.
-
-                <br><br>
-
-                With a background in software, client insight, and higher education, I bring a structured, human-centred approach to analysis. I am especially motivated by work that advances women’s health, reproductive rights, and social equity.
-            </p>
-
-            <div class="button-group pt-1 d-flex flex-column flex-sm-row gap-2">
-
-                <a href="projects.html" class="btn-main">
-                    Case Studies
-                </a>
-
-                <a href="contact.html" class="btn-secondary">
-                    Get in Touch
-                </a>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/llewellynksj" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/llewellynksj" target="_blank">GitHub</a>
+                </div>
 
             </div>
 
-            <div class="skills-box pt-1">
 
-                <h3>Core Skills</h3>
+            <!-- RIGHT -->
 
-                <div class="skills-list">
+            <div class="col-lg-7 mt-3">
 
-                    <span>Tableau</span>
-                    <span>SQL</span>
-                    <span>Python</span>
-                    <span>Data Visualisation</span>
-                    <span>Statistical Analysis</span>
-                    <span>Policy-Focused Research</span>
+                <p class="hero-text">
+                    I’m motivated by the opportunity to use data to support better decisions — particularly in areas that shape people’s health, security, and opportunity.
+
+                    <br><br>
+
+                    With a background in software, client insight, and higher education, I bring a structured, human-centred approach to analysis. I am especially motivated by work that advances women’s health, reproductive rights, and social equity.
+                </p>
+
+                <div class="button-group pt-1 d-flex flex-column flex-sm-row gap-2">
+
+                    <a href="projects.html" class="btn-main">
+                        Case Studies
+                    </a>
+
+                    <a href="contact.html" class="btn-secondary">
+                        Get in Touch
+                    </a>
+
+                </div>
+
+                <div class="skills-box pt-1">
+
+                    <h3>Core Skills</h3>
+
+                    <div class="skills-list">
+
+                        <span>Tableau</span>
+                        <span>SQL</span>
+                        <span>Python</span>
+                        <span>Data Visualisation</span>
+                        <span>Statistical Analysis</span>
+                        <span>Policy-Focused Research</span>
+
+                    </div>
 
                 </div>
 
             </div>
 
         </div>
-
     </div>
 
 </div>
