--- a/pregnancyloss_project.html
+++ b/pregnancyloss_project.html
@@ -41,130 +41,131 @@
     </div>
 </nav>
 
-<main class="container content-wrapper">
+<main class="container">
+    <div class="content-wrapper">
 
-    <header class="page-header">
-        <h1>The Lasting Economic Impact of Pregnancy Loss</h1>
-        <p class="intro">
-            This project explores how pregnancy loss is associated with changes in women’s employment and earnings over time.
-            Using data from the UK Office for National Statistics (ONS), it examines whether adverse pregnancy events correspond
-            with measurable disruptions in labour market outcomes.
-        </p>
-    </header>
+        <header class="page-header">
+            <h1>The Lasting Economic Impact of Pregnancy Loss</h1>
+            <p class="intro">
+                This project explores how pregnancy loss is associated with changes in women’s employment and earnings over time.
+                Using data from the UK Office for National Statistics (ONS), it examines whether adverse pregnancy events correspond
+                with measurable disruptions in labour market outcomes.
+            </p>
+        </header>
 
-    <section>
-        <h2>Project Overview</h2>
-        <p>
-            Pregnancy loss can have profound emotional and physical effects. However, its economic consequences are less frequently examined.
-            This analysis focuses on two key questions:
-        </p>
+        <section>
+            <h2>Project Overview</h2>
+            <p>
+                Pregnancy loss can have profound emotional and physical effects. However, its economic consequences are less frequently examined.
+                This analysis focuses on two key questions:
+            </p>
 
-        <ul>
-            <li>How does pregnancy loss affect women’s earnings?</li>
-            <li>Are women less likely to be employed following a loss?</li>
-        </ul>
+            <ul>
+                <li>How does pregnancy loss affect women’s earnings?</li>
+                <li>Are women less likely to be employed following a loss?</li>
+            </ul>
 
-        <p>
-            Understanding these patterns may help inform workplace policy, economic support programmes, and advocacy efforts
-            focused on gender equality and employee wellbeing.
-        </p>
-    </section>
+            <p>
+                Understanding these patterns may help inform workplace policy, economic support programmes, and advocacy efforts
+                focused on gender equality and employee wellbeing.
+            </p>
+        </section>
 
-    <section class="viz-section">
-        <h2>Interactive Dashboard</h2>
+        <section class="viz-section">
+            <h2>Interactive Dashboard</h2>
 
-        <div class='tableauPlaceholder' id='viz1770550577521'>
-            <noscript>
-                <a href='#'><img alt='Economic Consequences of Pregnancy Loss ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ec&#47;EconomicConsequencesofPregnancyLoss&#47;EconomicConsequencesofPregnancyLoss&#47;1_rss.png' style='border: none' /></a>
-            </noscript>
-            <object class='tableauViz'  style='display:none;'>
-                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='EconomicConsequencesofPregnancyLoss&#47;EconomicConsequencesofPregnancyLoss' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ec&#47;EconomicConsequencesofPregnancyLoss&#47;EconomicConsequencesofPregnancyLoss&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' />
-            </object>
-        </div>
-    </section>
+            <div class='tableauPlaceholder' id='viz1770550577521'>
+                <noscript>
+                    <a href='#'><img alt='Economic Consequences of Pregnancy Loss ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ec&#47;EconomicConsequencesofPregnancyLoss&#47;EconomicConsequencesofPregnancyLoss&#47;1_rss.png' style='border: none' /></a>
+                </noscript>
+                <object class='tableauViz'  style='display:none;'>
+                    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='EconomicConsequencesofPregnancyLoss&#47;EconomicConsequencesofPregnancyLoss' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ec&#47;EconomicConsequencesofPregnancyLoss&#47;EconomicConsequencesofPregnancyLoss&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' />
+                </object>
+            </div>
+        </section>
 
-    <section class="highlight-box">
-        <h2 class="mt-1">Key Insights</h2>
-        <ul>
-            <li><strong>Employment declines immediately following pregnancy loss</strong>, but generally recovers within several quarters.</li>
-            <li><strong>Earnings fall after pregnancy loss and remain below baseline for longer</strong>, even after many women return to work.</li>
-            <li>This suggests that returning to employment does not necessarily restore prior earning trajectories.</li>
-            <li>Patterns are consistent across loss categories, though the magnitude varies.</li>
-        </ul>
-    </section>
+        <section class="highlight-box">
+            <h2 class="mt-1">Key Insights</h2>
+            <ul>
+                <li><strong>Employment declines immediately following pregnancy loss</strong>, but generally recovers within several quarters.</li>
+                <li><strong>Earnings fall after pregnancy loss and remain below baseline for longer</strong>, even after many women return to work.</li>
+                <li>This suggests that returning to employment does not necessarily restore prior earning trajectories.</li>
+                <li>Patterns are consistent across loss categories, though the magnitude varies.</li>
+            </ul>
+        </section>
 
-    <section>
-        <h2>Understanding the Charts</h2>
+        <section>
+            <h2>Understanding the Charts</h2>
 
-        <h3>Chart 1: Earnings over time</h3>
-        <p>
-            This chart shows how women’s average monthly earnings change in the months before and after pregnancy loss.
-            Earnings are stable prior to the event, drop sharply afterwards, and recover gradually — though not always fully.
-        </p>
-        <p>Each line represents the modelled change in average monthly earnings (£) compared to a baseline period before the pregnancy event.</p>
-        <p>Event based time analysis:</p>
+            <h3>Chart 1: Earnings over time</h3>
+            <p>
+                This chart shows how women’s average monthly earnings change in the months before and after pregnancy loss.
+                Earnings are stable prior to the event, drop sharply afterwards, and recover gradually — though not always fully.
+            </p>
+            <p>Each line represents the modelled change in average monthly earnings (£) compared to a baseline period before the pregnancy event.</p>
+            <p>Event based time analysis:</p>
 
-        <table class="table table-sm">
-            <thead>
-                <tr>
-                    <th>Time Period</th>
-                    <th>Quarter</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr><td>1 year prior</td><td>-4</td></tr>
-                <tr><td>1–3 months prior</td><td>-1</td></tr>
-                <tr><td>Loss occurred</td><td>0</td></tr>
-                <tr><td>1 year after</td><td>+4</td></tr>
-            </tbody>
-        </table>
+            <table class="table table-sm">
+                <thead>
+                    <tr>
+                        <th>Time Period</th>
+                        <th>Quarter</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>1 year prior</td><td>-4</td></tr>
+                    <tr><td>1–3 months prior</td><td>-1</td></tr>
+                    <tr><td>Loss occurred</td><td>0</td></tr>
+                    <tr><td>1 year after</td><td>+4</td></tr>
+                </tbody>
+            </table>
 
-        <h3>Chart 2: Employment probability</h3>
-        <p>
-            Employment probability drops immediately following loss, suggesting temporary exits from work.
-            While employment often recovers, earnings data indicate that financial impacts persist.
-        </p>
-    </section>
+            <h3>Chart 2: Employment probability</h3>
+            <p>
+                Employment probability drops immediately following loss, suggesting temporary exits from work.
+                While employment often recovers, earnings data indicate that financial impacts persist.
+            </p>
+        </section>
 
-    <section class="soft-section">
-        <h2 class="mt-1">Data Source & Preparation</h2>
-        <p>
-            Data was obtained from the Office for National Statistics (ONS), covering England from 2014–2022.
-        </p>
-        <ul>
-            <li>Unioned multiple ONS tables</li>
-            <li>Standardised variables</li>
-            <li>Created event-relative time measures</li>
-            <li>Ensured anonymised, aggregated outputs</li>
-        </ul>
-    </section>
+        <section class="soft-section">
+            <h2 class="mt-1">Data Source & Preparation</h2>
+            <p>
+                Data was obtained from the Office for National Statistics (ONS), covering England from 2014–2022.
+            </p>
+            <ul>
+                <li>Unioned multiple ONS tables</li>
+                <li>Standardised variables</li>
+                <li>Created event-relative time measures</li>
+                <li>Ensured anonymised, aggregated outputs</li>
+            </ul>
+        </section>
 
-    <section>
-        <h2>Why This Matters</h2>
-        <p>
-            Although many women return to work following pregnancy loss, reduced earnings often persist.
-            This highlights the importance of supportive workplace policies and financial protections.
-        </p>
-    </section>
+        <section>
+            <h2>Why This Matters</h2>
+            <p>
+                Although many women return to work following pregnancy loss, reduced earnings often persist.
+                This highlights the importance of supportive workplace policies and financial protections.
+            </p>
+        </section>
 
-    <section>
-        <h2>Links</h2>
-        <p>
-            <a href="https://public.tableau.com/views/EconomicConsequencesofPregnancyLoss/EconomicConsequencesofPregnancyLoss" target="_blank">
-                View the interactive dashboard
-            </a><br>
-            <a href="#" target="_blank">
-                GitHub repository
-            </a>
-        </p>
-    </section>
+        <section>
+            <h2>Links</h2>
+            <p>
+                <a href="https://public.tableau.com/views/EconomicConsequencesofPregnancyLoss/EconomicConsequencesofPregnancyLoss" target="_blank">
+                    View the interactive dashboard
+                </a><br>
+                <a href="#" target="_blank">
+                    GitHub repository
+                </a>
+            </p>
+        </section>
 
-    <footer>
-        <p>
-            Source: Office for National Statistics (ONS). Modelled estimates show changes relative to pre-event baselines.
-        </p>
-    </footer>
-
+        <footer>
+            <p>
+                Source: Office for National Statistics (ONS). Modelled estimates show changes relative to pre-event baselines.
+            </p>
+        </footer>
+    </div>
 </main>
 
 <script type='text/javascript'>
